--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: .7rem;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(239, 239, 239);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #0E121D;
+    border-radius: 1rem;
+    border: .1rem solid transparent;
+    background-clip: content-box;
+} 
