--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -1,55 +1,191 @@
-.banner {
-    /* position: relative; */
-    /* width: 100%;
-    height: 200px; 
-    background-image: url(path/to/your/banner-image.jpg);
-    background-size: cover;
-    background-position: center; */
+/* banner text */
+.banner-text {
+  transform: translateY(-50%);
+  animation: slide-in 1s forwards;
+}
+@keyframes slide-in {
+  0% {
+    left: -100%;
   }
-  
-  .banner-text {
-    position: absolute;
-    left: -100%; /* Initial position off the left side of the banner */
-    top: 50%;
-    transform: translateY(-50%);
-    color: white;
-    font-size: 24px;
-    animation: slide-in 1s forwards; /* Animation duration and effect */
+  100% {
+    left: 0;
   }
-  
-  @keyframes slide-in {
-    0% {
-      left: -100%; /* Start position off the left side of the banner */
-    }
-    100% {
-      left: 0; /* Final position at the left edge of the banner */
-    }
+}
+/* ------------------------- */
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.text-overlay {
+  position: absolute;
+  top: 0;
+  /* left: 0; */
+  right: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row-reverse;
+  /* flex-direction: column; */
+  width: 60%;
+  /* background-color: rgba(0, 0, 0, 0.5); Semi-transparent black */
+  background-color: rgba(3, 18, 64, 0.5);
+  color: white;
+}
+
+.text-overlay h2 {
+  font-size: 24px;
+  text-align: center;
+}
+/* -------------------- */
+/* Set the container for the image and text */
+.image-container-HI {
+  position: relative; /* This is essential for proper positioning */
+}
+
+/* Style the image */
+.image-container-HI img {
+  display: block;
+  width: 100%; /* Adjust this to your desired image size */
+  height: auto; /* To maintain aspect ratio */
+}
+
+/* Style the text overlay */
+.text-overlay-HI {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: linear-gradient(
+    rgba(3, 18, 64, 0) 60%,
+    rgba(3, 18, 64, 1) 105%
+  );
+  color: #fff;
+  padding: 2rem;
+  width: 100%;
+  height: 100%;
+  z-index: 9;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+/* Optional: Add more styling to the text */
+.text-overlay-HI p {
+  margin: 0; /* Remove default margin */
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.1rem;
+}
+/* --- */
+.vertical-text {
+  writing-mode: vertical-rl; /* "vertical-rl" for vertical orientation from right to left */
+  text-orientation: mixed; /* This is optional; it allows vertical Latin characters to be upright */
+  white-space: nowrap;
+}
+/* --------- */
+
+/* --------- */
+.kenburns-top {
+  -webkit-animation: kenburns-top 5s linear forwards;
+  animation: kenburns-top 5s linear forwards;
+}
+
+@-webkit-keyframes kenburns-top {
+  0% {
+    -webkit-transform: scale(1) translateY(0);
+    transform: scale(1) translateY(0);
+    -webkit-transform-origin: 50% 16%;
+    transform-origin: 50% 16%;
   }
-  /* ------------------------- */
-  .image-container {
-    position: relative;
-    display: inline-block;
+  100% {
+    -webkit-transform: scale(1.25) translateY(-15px);
+    transform: scale(1.25) translateY(-15px);
+    -webkit-transform-origin: top;
+    transform-origin: top;
   }
-  
-  .text-overlay {
-    position: absolute;
-    top: 0;
-    /* left: 0; */
-    right:0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    /* align-items: center; */
-    flex-direction: column;
-    width: 60%;
-    /* background-color: rgba(0, 0, 0, 0.5); Semi-transparent black */
-    background-color: rgba(3, 18, 64, 0.5); 
-    color: white;
+}
+@keyframes kenburns-top {
+  0% {
+    -webkit-transform: scale(1) translateY(0);
+    transform: scale(1) translateY(0);
+    -webkit-transform-origin: 50% 16%;
+    transform-origin: 50% 16%;
   }
-  
-  .text-overlay h2 {
-    font-size: 24px;
-    text-align: center;
+  100% {
+    -webkit-transform: scale(1.25) translateY(-15px);
+    transform: scale(1.25) translateY(-15px);
+    -webkit-transform-origin: top;
+    transform-origin: top;
   }
-  
+}
+/* --------------- */
+.t4s-collection-item .t4s-eff-border-run::before,
+.t4s-collection-item .t4s-eff-border-run::after {
+  border-radius: var(--item-rd);
+
+}
+.t4s-eff-border-run::before,
+.t4s-eff-border-run::after {
+  position: absolute;
+  content: "";
+  opacity: 0;
+  width: 0;
+  height: 0;
+  transition: all 0.8s ease;
+}
+.t4s-eff-border-run::before {
+  border-top: 1px solid #fff;
+  border-left: 1px solid #fff;
+  top: 15px;
+  left: 15px;
+}
+.t4s-eff-border-run::after {
+  border-right: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  right: 15px;
+  bottom: 15px;
+}
+.t4s-eff-border-run:hover::before,
+.t4s-eff-border-run:hover::after {
+  opacity: 1;
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
+}
+.t4s-eff-border-run:before,
+.t4s-eff-border-run:after {
+  position: absolute;
+  content: "";
+  opacity: 0;
+  width: 0;
+  height: 0;
+  transition: all 0.8s ease;
+}
+/* ----------------- */
+.t4s-eff-img-zoom{
+  transition: all 1s;
+}
+.t4s-eff-img-zoom:hover {
+  transform: scale(1.1);
+}
+
+.zoomInAlu {
+  /* overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%; */
+  cursor: pointer;
+  pointer-events: all;
+}
+
+.zoomInAlu {
+  transition: transform 0.3s ease;
+  width:100%;
+  height:100%;
+}
+
+.zoomInAlu:hover {
+  transform: scale(1);
+}
