--- a/src/styles/animate.css
+++ b/src/styles/animate.css
@@ -18,7 +18,8 @@ body {
     height: 0;
   }
   100% {
-    height: 40vh; /* End with full height */
+    /* height: 40vh;  */
+    height:14rem;
     background-color: #ffd303;
   }
 }
@@ -37,6 +38,29 @@ body {
 }
 
 @keyframes colorFillAnimation {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100vw !important;
+    background-color: #ffd303;
+  }
+}
+
+/* @-horizontal bg */
+.background-animationV {
+  /* position: absolute; */
+  position: relative;
+  top: 0;
+  /* left: 0; */
+  right: 0;
+  width: 0;
+  height: 100%;
+  background-color: #fff;
+  animation: colorFillAnimationV 1s linear forwards 1s;
+}
+
+@keyframes colorFillAnimationV {
   0% {
     width: 0;
   }
