--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,16 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-    width: .7rem;
+  width: 0.7rem;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: rgb(239, 239, 239);
+  background-color: rgb(239, 239, 239);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #0E121D;
-    border-radius: 1rem;
-    border: .1rem solid transparent;
-    background-clip: content-box;
-} 
+  background-color: #0e121d;
+  border-radius: 1rem;
+  border: 0.1rem solid transparent;
+  background-clip: content-box;
+}
