--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,7 +23,8 @@ body,
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: white;
+  /* background-color: white; */
+  background-color: #ffd303;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -31,9 +32,14 @@ body,
 .hover-underline-animation:hover:after {
   transform: scaleX(1);
   transform-origin: bottom left;
+  background-color: #ffd303;
 }
 
 .openInStyle {
   transition: all 0.3s ease-in-out;
   transform: translate(0%);
+}
+/* --- */
+.pe-7s-search:before {
+  content: "\e618";
 }
