--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -57,15 +57,31 @@
 
 .text-overlay {
   position: absolute;
-  top: 0;
+
   right: 0;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row-reverse;
-  width: 60%;
+  /* width: 60%; */
   background-color: rgba(3, 18, 64, 0.5);
+}
+@media (max-width:768px){
+  .text-overlay{
+    bottom:0;
+    width:100%;
+    height: 74%;
+    text-align: center;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+@media (min-width:768px){
+  .text-overlay{
+    width:60%;
+    top: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row-reverse;
+  }
 }
 /* ----------------------------------- */
 /* @-Home industries */
