--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -43,3 +43,17 @@ body,
 .pe-7s-search:before {
   content: "\e618";
 }
+/* -- */
+.tabsUnderline{
+  position: relative;
+}
+.tabsUnderline::after{
+  content: ""; 
+  position: absolute;
+  bottom: -9px;
+  left: 50%; 
+  transform: translateX(-50%); 
+  width: 70%; 
+  height: 2px; 
+  background-color: #FBD404; 
+}
