--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,16 +44,32 @@ body,
   content: "\e618";
 }
 /* -- */
-.tabsUnderline{
+.tabsUnderline {
   position: relative;
 }
-.tabsUnderline::after{
-  content: ""; 
+.tabsUnderline::after {
+  content: "";
   position: absolute;
   bottom: -9px;
-  left: 50%; 
-  transform: translateX(-50%); 
-  width: 70%; 
-  height: 2px; 
-  background-color: #FBD404; 
+  left: 50%;
+  transform: translateX(-50%);
+  width: 70%;
+  height: 2px;
+  background-color: #fbd404;
+}
+/* ------------ */
+
+.DownloadCardHover{
+  opacity: 1;
+transition: opacity 1s ease 0s;
+}
+.DownloadCardHover:hover {
+  opacity: 0.86;
+  background: rgb(255, 211, 3);
+  background: linear-gradient(
+    0deg,
+    rgba(255, 211, 3, 1) 18%,
+    rgba(255, 211, 3, 1) 34%,
+    rgba(255, 234, 78, 1) 100%
+  );
 }
