--- a/src/styles/flickity.css
+++ b/src/styles/flickity.css
@@ -30,7 +30,7 @@ https://flickity.metafizzy.co
   width: 100%;
 }
 
-/* draggable */
+/* @-draggable */
 
 .flickity-enabled.is-draggable {
   -webkit-tap-highlight-color: transparent;
@@ -90,10 +90,7 @@ https://flickity.metafizzy.co
 
 .flickity-prev-next-button {
   top: 50%;
-  /* width: 35px; */
-  /* height: 35px; */
   border-radius: 50%;
-  /* vertically center */
   transform: translateY(-50%);
 }
 
@@ -179,9 +176,7 @@ https://flickity.metafizzy.co
 /* ------------ */
 .team-btn {
   margin: 1rem;
-  /* width: 20% !important; */
   margin: auto;
-  /* border:1px solid; */
   text-align: center;
 }
 .team-2 {
@@ -245,7 +240,6 @@ https://flickity.metafizzy.co
 /* -------------------------- */
 .ProductCarouselIndustries .text-center.w-\[33\.33\%\].flex.justify-center {
   opacity: 0.4;
-  /* height: -webkit-fill-available; */
   height: 85vh;
   /* height: 80vh; */
   align-items: center;
@@ -269,20 +263,3 @@ https://flickity.metafizzy.co
 }
 
 /* ------------------------- */
-/* flickity.css (or your custom styles) */
-/* .carousel.ProductCarouselIndustries {
-  perspective: 1000px; 
-}
-
-.carousel-cells {
-  transform-style: preserve-3d; 
-  transition: transform 0.5s; 
-}
-
-.is-selected .carousel-cells {
-  transform: rotateY(0deg); 
-}
-
-.carousel-cells {
-  transform: rotateY(90deg);
-} */
