--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,7 +23,6 @@ body,
   height: 2px;
   bottom: 0;
   left: 0;
-  /* background-color: white; */
   background-color: #ffd303;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
@@ -75,13 +74,10 @@ body,
 }
 
 .ProductCard {
-  /* background: rgb(255, 211, 3);
+  background: rgb(246, 185, 26);
   background: linear-gradient(
     0deg,
-    rgba(255, 211, 3, 1) 18%,
-    rgba(255, 211, 3, 1) 34%,
-    rgba(255, 234, 78, 1) 100%
-  ); */
-  background: rgb(246,185,26);
-  background: linear-gradient(0deg, rgba(246,185,26,1) 25%, rgba(255,211,3,1) 62%);
+    rgba(246, 185, 26, 1) 25%,
+    rgba(255, 211, 3, 1) 62%
+  );
 }
