--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -58,7 +58,18 @@
   right: 0;
   background-color: rgba(3, 18, 64, 0.5);
 }
-@media (max-width: 768px) {
+
+@media (max-width: 400px) {
+  .text-overlay {
+    bottom: 0;
+    width: 100%;
+    height: 69%;
+    text-align: center;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+@media (min-width:400px) and (max-width: 768px) {
   .text-overlay {
     bottom: 0;
     width: 100%;
