--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -10,16 +10,23 @@
 .MobProductCarouselIndustries .flickity-viewport {
   height: 46vh !important;
 }
+@media (max-width:350px){
+  .MobProductCarouselIndustries .flickity-viewport {
+    height: 47vh !important;
+  }
+}
+@media  (min-width:350px) and (max-width:400px){
+  .MobProductCarouselIndustries .flickity-viewport {
+    height: 54vh !important;
+  }
+}
 
 @media (max-width: 768px) {
   .container {
-    /* height: 300px; */
     height: 350px;
   }
   .div1 img,
   .div2 {
-    /* width: 300px;
-    height: 300px; */
     width: 100%;
     height: 350px;
   }
