--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -88,8 +88,8 @@ body,
 }
 
 .drawer-enter-active {
-  transform: translateX(0);
-  transition: transform 2s ease-in-out;
+  transform: translateX(0%);
+  transition: transform 500ms ease-in-out;
 }
 
 .drawer-exit {
@@ -98,5 +98,5 @@ body,
 
 .drawer-exit-active {
   transform: translateX(-100%);
-  transition: transform 2s ease-in-out;
+  transition: transform 500ms ease-in-out;
 }
