--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -3,7 +3,18 @@
   src: url("../fonts/Avenir-Black.woff2") format("woff2"),
     url("../fonts/Avenir-Black.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Avenir-body";
+  src: url("../fonts/Avenir-Book.woff2") format("woff2"),
+    url("../fonts/Avenir-Book.woff") format("woff");
+}
 .vertical-text,
 .fontBoldAlupak {
   font-family: "Avenir-Bold", sans-serif;
+}
+
+body,
+.font {
+  font-family: "Avenir-body", sans-serif;
 }
