--- a/src/styles/flickity.css
+++ b/src/styles/flickity.css
@@ -104,9 +104,15 @@ https://flickity.metafizzy.co
     background-color: #f3f4f6;
   }
   .flickity-prev-next-button {
-    width: 35px;
-    height: 35px;
+    width: 32px;
+    height: 32px;
+    /* border:2px solid red; */
+    outline: none; 
   }
+
+}
+.flickity-prev-next-button:focus{
+  box-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 }
 
 @media (max-width: 350px) {
