--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -66,3 +66,9 @@
   opacity: 1;
   right: 0;
 }
+/* ----- */
+@media (min-width: 1024px) {
+  .download-bottom span {
+    font-size: 0.9rem;
+  }
+}
