about tabs settings

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -99,3 +99,6 @@
   /* border:2px solid red; */
   font-size: 14px !important;
 }
+.tabsscroll .tabsUnderline::after {
+  bottom: -5px !important;
+}
