--- a/src/styles/animate.css
+++ b/src/styles/animate.css
@@ -16,9 +16,10 @@ body {
     left: 0;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .background-animation_H {
-    left: 50%;
+    /* left: 50%; */
+    left: 15%;
   }
 }
 
