--- a/src/styles/animate.css
+++ b/src/styles/animate.css
@@ -54,7 +54,7 @@ body {
     background-color: #ffd303;
   }
 }
-
+/* ------------------------------------ */
 /* @-horizontal bg */
 .background-animationV {
   position: relative;
